# WhispersCpp-Android

./: .gitignore  .gitmodules  README.md  build.gradle.kts  index.html  settings.gradle.kts
.github/workflows/: AndroidBuild.yml  ci-build.yml  ci-publish.yml
app/: build.gradle.kts
app/src/androidTest/java/com/negi/whispers/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/negi/whispers/: MainActivity.kt
app/src/main/java/com/negi/whispers/media/: WaveCodec.kt
app/src/main/java/com/negi/whispers/recorder/: Recorder.kt
app/src/main/java/com/negi/whispers/ui/composables/: Composables.kt
app/src/main/java/com/negi/whispers/ui/main/: LanguageLabel.kt  MainScreenEntryPoint.kt  MainScreenViewModel.kt  MyRecord.kt
app/src/main/java/com/negi/whispers/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/negi/whispers/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: .gitignore  build.gradle.kts
nativelib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
nativelib/src/main/jni/whisper/: CMakeLists.txt  jni.c  whisperLib.c
nativelib/src/main/jni/whisper/patch/: ggml-cpu-extra.cpp
